Added .dockerignore file and node dependens in docker-compose.yml file. I need modified README.md file for explain to how to use the projects.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,19 @@ services:
       - POSTGRES_PASSWORD=postgres
   
   web:
-    build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    build: 
+      context: .
+      dockerfile: Dockerfile
+    command: sh -c "npm install && python manage.py runserver 0.0.0.0:8000"
     volumes: 
       - .:/code
     ports:
       - "8000:8000"
     depends_on:
       - db
+
+
+
+
+
 
