--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,9 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile
-    command: sh -c "npm install && python manage.py runserver 0.0.0.0:8000"
+    command: "python manage.py runserver 0.0.0.0:8000"
     volumes: 
-      - .:/code
+      - .:/django_code
     ports:
       - "8000:8000"
     depends_on:
